Update New Ringgold ID request with my reCAPTHA - FULL (QA).html
Added value to the field

--- a/New Ringgold ID request with my reCAPTHA - FULL (QA).html
+++ b/New Ringgold ID request with my reCAPTHA - FULL (QA).html
@@ -67,7 +67,7 @@
 
     <input type=hidden name='captcha_settings' value='{"keyname":"Google_reCAPTCHA_v2","fallback":"true","orgId":"00DVA000001anT3","ts":""}'>
     <input type=hidden name="orgid" value="00DVA000001anT3">
-    <input type=hidden name="retURL" value="https://copyright-clearance--full.sandbox.lightning.force.com/lightning/page/home/">
+    <input type=hidden name="retURL" value="https://www.copyright.com/solutions-ringgold/">
 
     <input type=hidden name="recordType" id="recordType" value="0124Q000001hjDe">
     <input type=hidden name="subject" id="subject" value="ID Request Webform">
@@ -415,6 +415,7 @@
                     <option value="Aries">Aries</option>
                     <option value="Benchpress">Benchpress</option>
                     <option value="eJournalPress">eJournalPress</option>
+                    <option value="RightsLink Author">RightsLink Author</option>
                     <option value="ScholarOne">ScholarOne</option>
                     <option value="Scholastica">Scholastica</option>
                     <option value="Not Applicable">Not Applicable</option>
