Update New Ringgold ID request with my reCAPTHA - FULL (QA).html
Changed return URL.

--- a/New Ringgold ID request with my reCAPTHA - FULL (QA).html
+++ b/New Ringgold ID request with my reCAPTHA - FULL (QA).html
@@ -67,7 +67,7 @@
 
   <input type=hidden name='captcha_settings' value='{"keyname":"Google_reCAPTCHA_v2","fallback":"true","orgId":"00DVA000001anT3","ts":""}'>
   <input type=hidden name="orgid" value="00DVA000001anT3">
-  <input type=hidden name="retURL" value="https://www.copyright.com/solutions-ringgold/">
+  <input type=hidden name="retURL" value="https://www.copyright.com/solutions-ringgold/id-request-received/">
 
   <input type=hidden name="recordType" id="recordType" value="0124Q000001hjDe">
   <input type=hidden name="subject" id="subject" value="ID Request Webform">
@@ -464,3 +464,4 @@
   <input type="submit" name="submit">
 
 </form>
+
