Update New Ringgold ID request with my reCAPTHA - FULL (QA).html
Added 2 values to 'What System Are You Using?' and modified 1.

--- a/New Ringgold ID request with my reCAPTHA - FULL (QA).html
+++ b/New Ringgold ID request with my reCAPTHA - FULL (QA).html
@@ -413,13 +413,15 @@
       <td>What System Are You Using?:</td>
       <td><select id="00N4Q00000AzqtP" name="00N4Q00000AzqtP" onchange="updateRequirements3();">
         <option value="Aries">Aries</option>
-        <option value="Benchpress">Benchpress</option>
         <option value="eJournalPress">eJournalPress</option>
+        <option value="HighWire">HighWire</option>
         <option value="I am paying Author Charges with RightsLink">I am paying Author Charges with RightsLink</option>
+        <option value="Kriyadocs">Kriyadocs</option>
+        <option value="Open Journal Systems (OJS)">Open Journal Systems (OJS)</option>
         <option value="ScholarOne">ScholarOne</option>
         <option value="Scholastica">Scholastica</option>
         <option value="Not Applicable">Not Applicable</option>
-        <option value="Other system">Other system (which if selected will present a free text box)</option>
+        <option value="Other system">Other system</option>
       </select>
       </td>
     </tr>
@@ -464,5 +466,6 @@
   <input type="submit" name="submit">
 
 </form>
+
 
 
